Cambié las rutas de los css y js

--- a/jardinYpet.html
+++ b/jardinYpet.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/style-pet.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-pet.css">
     <title>Jardín y Mascotas</title>
 </head>
 <body>
@@ -176,6 +176,6 @@
         <button class="erase--disp" id="erase--disp">Erase<br>Display</button>
 
 
-    <script src="/script-pet.js"></script>
+    <script src="script-pet.js"></script>
 </body>
 </html>
