--- a/negocios.html
+++ b/negocios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/style-neg.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-neg.css">
     <title>Movilidad, Negocios y Logística</title>
 </head>
 <body>
@@ -199,7 +199,7 @@
 
             <button class="erase--disp" id="erase--disp">Erase<br>Display</button>
 
-    <script src="/script-neg.js"></script>
+    <script src="script-neg.js"></script>
 </body>
 </html>
             
