--- a/clima.html
+++ b/clima.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/style-clima.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-clima.css">
     <title>Climatización y Ahorro de Energía</title>
 </head>
 <body>
@@ -189,6 +189,6 @@
         <button class="erase--disp" id="erase--disp">Erase<br>Display</button>
 
 
-    <script src="/script-clima.js"></script>
+    <script src="script-clima.js"></script>
 </body>
 </html>
