--- a/luzYhogar.html
+++ b/luzYhogar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/styles-ilu.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-ilu.css">
     <title>Iluminación y Comfort del Hogar</title>
 </head>
 <body>
@@ -211,6 +211,6 @@
 
         <button class="erase--disp" id="erase--disp">Erase<br>Display</button>
 
-    <script src="/script-ilu.js"></script>
+    <script src="script-ilu.js"></script>
 </body>
 </html>
