--- a/seguridad.html
+++ b/seguridad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Automatizaciones</title>
 </head>
 <body>
@@ -240,6 +240,6 @@
 
 
 
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
