--- a/negocios.html
+++ b/negocios.html
@@ -13,22 +13,27 @@
         <p class="top--title">El Automatizador</p>
         <div class="top--menu-container">
             <p class="top--ham">&#x2261;</p><br><br>
-            <a href="index.html">
+            <a href="https://freeman-geo.github.io/automatizador/index.html">
                 <p class="top--menu-title">Index</p>
             </a><br>
-            <a href="seguridad.html">
+
+            <a href="https://freeman-geo.github.io/automatizador/seguridad.html">
                 <p class="top--menu-title">Seguridad</p>
             </a><br>
-            <a href="luzYhogar.html">
+
+            <a href="https://freeman-geo.github.io/automatizador/luzYhogar.html">
                 <p class="top--menu-title">Iluminación<br>y Hogar</p>
             </a><br>
-            <a href="jardinYpet.html">
-                <p class="top--menu-title">Jardin y<br>Mascotas</p>
+
+            <a href="https://freeman-geo.github.io/automatizador/jardinYpet.html">
+                <p class="top--menu-title">Jardín y<br>Mascotas</p>
             </a><br>
-            <a href="clima.html">
+
+            <a href="https://freeman-geo.github.io/automatizador/clima.html">
                 <p class="top--menu-title title-clim">Clima y ahorro de<br>Energía</p>
             </a><br>
-            <a href="negocios.html">
+
+            <a href="https://freeman-geo.github.io/automatizador/negocios.html">
                 <p class="top--menu-title">Movilidad, <br>Negocios y<br>Logística</p>
             </a><br>
         </div><br>
